<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/sg_background_5"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".WelcomeScreen">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_skills"
        android:id="@+id/btn_skills"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_strains"
        android:id="@+id/btn_strains"
        android:layout_below="@+id/btn_skills"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_professions"
        android:id="@+id/btn_professions"
        android:layout_below="@+id/btn_strains"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_character"
        android:id="@+id/btn_character"
        android:layout_below="@+id/btn_professions"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cross_ref"
        android:id="@+id/btn_cross_ref"
        android:layout_below="@+id/btn_character"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
