<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/sg_background_5"
    tools:context="beautifuldonkey.survivorsguide.CharacterExistingActivity">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/existingFiles"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_alignParentLeft="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit"
        android:id="@+id/btn_editExisting"
        android:layout_toRightOf="@+id/existingFiles"/>

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_delete"
      android:id="@+id/btn_delete"
      android:layout_toRightOf="@+id/btn_editExisting"/>

    <TextView
        android:text="@string/character_name"
        android:id="@+id/existingCharNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/existingFiles"
        android:layout_alignParentLeft="true"
        style="@style/UiText"/>
    <TextView
        android:text="@string/character_name"
        android:id="@+id/existingCharName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/existingFiles"
        android:layout_toRightOf="@+id/existingCharNameLabel"
        style="@style/UiText"/>

    <TextView
        android:text="@string/character_strain"
        android:id="@+id/existingCharStrainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/existingCharNameLabel"
        android:layout_alignParentLeft="true"
        style="@style/UiText"/>
    <TextView
        android:text="@string/character_strain"
        android:id="@+id/existingCharStrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/existingCharName"
        android:layout_toRightOf="@+id/existingCharStrainLabel"
        style="@style/UiText"/>

    <TextView
        android:text="@string/character_profession"
        android:id="@+id/existingCharProfessionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/existingCharStrainLabel"
        android:layout_alignParentLeft="true"
        style="@style/UiText"/>
    <TextView
        android:text="@string/character_profession"
        android:id="@+id/existingCharProfession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/existingCharStrain"
        android:layout_toRightOf="@+id/existingCharProfessionLabel"
        style="@style/UiText"/>

    <TextView
        android:text="@string/character_infection"
        android:id="@+id/existingCharInfectionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/existingCharProfessionLabel"
        android:layout_alignParentLeft="true"
        style="@style/UiText"/>
    <TextView
        android:text="@string/character_infection"
        android:id="@+id/existingCharInfection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/existingCharProfession"
        android:layout_toRightOf="@+id/existingCharInfectionLabel"
        style="@style/UiText"/>

    <TextView
        android:text="@string/character_body"
        android:id="@+id/existingCharBodyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/existingCharInfectionLabel"
        android:layout_alignParentLeft="true"
        style="@style/UiText"/>
    <TextView
        android:text="@string/character_body"
        android:id="@+id/existingCharBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/existingCharInfection"
        android:layout_toRightOf="@+id/existingCharBodyLabel"
        style="@style/UiText"/>

    <TextView
        android:text="@string/character_mind"
        android:id="@+id/existingCharMindLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/existingCharBodyLabel"
        android:layout_alignParentLeft="true"
        style="@style/UiText"/>
    <TextView
        android:text="@string/character_mind"
        android:id="@+id/existingCharMind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/existingCharBody"
        android:layout_toRightOf="@+id/existingCharMindLabel"
        style="@style/UiText"/>

    <View
        style="@style/Divider"
        android:id="@+id/skillDivider"
        android:layout_below="@+id/existingCharMind"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/existingCharSkills"
        android:layout_below="@+id/skillDivider"/>

</RelativeLayout>
