<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:id="@+id/statsHolder">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buildHolder"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newCharacterBuildLabel"
            android:text="@string/character_build"
            android:layout_centerInParent="true"
            style="@style/UiText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newCharacterBuild"
            android:layout_toRightOf="@+id/newCharacterBuildLabel"
            android:layout_centerInParent="true"
            style="@style/UiText"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buildHolder"
        android:id="@+id/infectionHolder">
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/btn_newCharLessInf"
            android:text="@string/btn_subtract"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newCharacterInfectionLabel"
            android:text="@string/character_infection"
            android:layout_centerInParent="true"
            style="@style/UiText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newCharacterInfection"
            android:text="0"
            android:layout_toRightOf="@+id/newCharacterInfectionLabel"
            android:layout_centerInParent="true"
            style="@style/UiText"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infectionHolder"
        android:id="@+id/bodyHolder">
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/btn_newCharLessBody"
            android:text="@string/btn_subtract"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newCharacterBodyLabel"
            android:text="@string/character_body"
            android:layout_centerInParent="true"
            style="@style/UiText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newCharacterBody"
            android:text="0"
            android:layout_toRightOf="@+id/newCharacterBodyLabel"
            android:layout_centerInParent="true"
            style="@style/UiText"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/btn_newCharMoreBody"
            android:text="@string/btn_add"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mindHolder"
        android:layout_below="@+id/bodyHolder">
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/btn_newCharLessMind"
            android:text="@string/btn_subtract"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newCharacterMindLabel"
            android:text="@string/character_mind"
            android:layout_centerInParent="true"
            style="@style/UiText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newCharacterMind"
            android:text="0"
            android:layout_toRightOf="@+id/newCharacterMindLabel"
            android:layout_centerInParent="true"
            style="@style/UiText"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/btn_newCharMoreMind"
            android:text="@string/btn_add"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</RelativeLayout>