<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/sg_background_5"
    tools:context="beautifuldonkey.survivorsguide.CharacterNewActivity">

    <EditText
        android:id="@+id/characterName"
        android:text="@string/character_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>

    <RelativeLayout
        android:id="@+id/statsHolder"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/characterName">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newCharacterBuildLabel"
            android:text="@string/character_build"
            android:textStyle="bold"
            android:textSize="@dimen/charActivityText"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newCharacterBuild"
            android:text="13"
            android:textSize="@dimen/charActivityText"
            android:layout_toRightOf="@+id/newCharacterBuildLabel"
            android:layout_alignParentTop="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newCharacterInfectionLabel"
            android:text="@string/character_infection"
            android:textStyle="bold"
            android:textSize="@dimen/charActivityText"
            android:layout_centerInParent="true"
            android:layout_below="@+id/newCharacterBuild" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newCharacterInfection"
            android:text="0"
            android:textSize="@dimen/charActivityText"
            android:layout_toRightOf="@+id/newCharacterInfectionLabel"
            android:layout_below="@+id/newCharacterBuild" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newCharacterInfection"
            android:id="@+id/bodyHolder">
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/btn_newCharLessBody"
                android:text="@string/btn_subtract"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newCharacterBodyLabel"
                android:text="@string/character_body"
                android:textStyle="bold"
                android:textSize="@dimen/charActivityText"
                android:layout_centerInParent="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newCharacterBody"
                android:text="0"
                android:textSize="@dimen/charActivityText"
                android:layout_toRightOf="@+id/newCharacterBodyLabel"
                android:layout_centerInParent="true"/>
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/btn_newCharMoreBody"
                android:text="@string/btn_add"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mindHolder"
            android:layout_below="@+id/bodyHolder">
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/btn_newCharLessMind"
                android:text="@string/btn_subtract"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newCharacterMindLabel"
                android:textStyle="bold"
                android:textSize="@dimen/charActivityText"
                android:text="@string/character_mind"
                android:layout_centerInParent="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newCharacterMind"
                android:text="0"
                android:textSize="@dimen/charActivityText"
                android:layout_toRightOf="@+id/newCharacterMindLabel"
                android:layout_centerInParent="true"/>
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/btn_newCharMoreMind"
                android:text="@string/btn_add"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>


    </RelativeLayout>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/strainDropDown"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/professionDropDown"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_alignParentRight="true"
        android:layout_below="@id/strainDropDown"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/secondProfessionSelector"
        android:layout_below="@+id/strainDropDown"
        android:layout_toLeftOf="@+id/professionDropDown">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/secondProfessionLabel"
            android:textStyle="bold"
            android:textSize="@dimen/charActivityText"
            android:text="@string/character_second_profession"
            android:layout_centerInParent="true"/>
        <CheckBox
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/addSecondProfession"
            android:checked="false"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/secondProfessionLabel"/>
    </RelativeLayout>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/secondProfessionDropDown"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_alignParentRight="true"
        android:layout_below="@id/professionDropDown"
        android:visibility="invisible"/>

    <ListView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/selectedSkills"
        android:layout_below="@+id/statsHolder" />

    <Spinner
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/availableSkills"
        android:layout_below="@+id/secondProfessionDropDown"
        android:layout_alignParentRight="true"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <Button
        android:id="@+id/btn_charName_done"
        android:text="@string/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectedSkills"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        android:layout_below="@+id/selectedSkills"
        android:layout_toRightOf="@+id/btn_charName_done"
        android:text="@string/btn_save"/>

    </RelativeLayout>