<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/sg_background_5"
    tools:context="beautifuldonkey.survivorsguide.CharacterEditExistingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_name"
        android:id="@+id/characterName"
        style="@style/UiText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/characterStrain"
        android:text="@string/character_strain"
        android:layout_below="@+id/characterName"
        style="@style/UiText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/characterProfessions"
        android:text="@string/character_profession"
        android:layout_below="@+id/characterStrain"
        style="@style/UiText"/>

    <include layout="@layout/item_character_attributes"
        android:layout_width="@dimen/character_attribute_holder"
        android:layout_height="@dimen/character_attribute_holder"
        android:layout_below="@+id/characterProfessions"/>

    <Spinner
        android:layout_width="@dimen/skill_list_item"
        android:layout_height="wrap_content"
        android:id="@+id/availableSkills"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/statsHolder"/>

    <ListView
        android:layout_width="@dimen/skill_list_item"
        android:layout_height="wrap_content"
        android:id="@+id/selectedSkills"
        android:layout_below="@+id/availableSkills" />

</RelativeLayout>
